[project]
authors = [{ name = "inwonakng", email = "inwon.kang04@gmail.com" }]
dependencies = ["sdv==1.22.1", "opacus==1.5.4"]
name = "dpsdg"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.1.1"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
dpsdg = { path = ".", editable = true }

[tool.pixi.tasks]
